[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/3x3_min_gen/Folder.svg" type="Texture" id=1]
[ext_resource path="res://addons/3x3_min_gen/dock.gd" type="Script" id=2]

[node name="3x3MinGen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="Input" type="HBoxContainer" parent="VBox"]
margin_right = 1024.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="VBox/Input"]
margin_top = 5.0
margin_right = 100.0
margin_bottom = 19.0
text = "Input Tiles Path"

[node name="LineEdit" type="LineEdit" parent="VBox/Input"]
margin_left = 104.0
margin_right = 1004.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="Folder" type="TextureButton" parent="VBox/Input"]
margin_left = 1008.0
margin_right = 1024.0
margin_bottom = 24.0
texture_normal = ExtResource( 1 )

[node name="OutputImage" type="HBoxContainer" parent="VBox"]
margin_top = 28.0
margin_right = 1024.0
margin_bottom = 52.0

[node name="Label" type="Label" parent="VBox/OutputImage"]
margin_top = 5.0
margin_right = 121.0
margin_bottom = 19.0
text = "Output Image Path"

[node name="LineEdit" type="LineEdit" parent="VBox/OutputImage"]
margin_left = 125.0
margin_right = 1004.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="Folder" type="TextureButton" parent="VBox/OutputImage"]
margin_left = 1008.0
margin_right = 1024.0
margin_bottom = 24.0
texture_normal = ExtResource( 1 )

[node name="OutputTileSet" type="HBoxContainer" parent="VBox"]
margin_top = 56.0
margin_right = 1024.0
margin_bottom = 80.0

[node name="Label" type="Label" parent="VBox/OutputTileSet"]
margin_top = 5.0
margin_right = 124.0
margin_bottom = 19.0
text = "Output TileSet Path"

[node name="LineEdit" type="LineEdit" parent="VBox/OutputTileSet"]
margin_left = 128.0
margin_right = 1004.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="Folder" type="TextureButton" parent="VBox/OutputTileSet"]
margin_left = 1008.0
margin_right = 1024.0
margin_bottom = 24.0
texture_normal = ExtResource( 1 )

[node name="GenImage" type="Button" parent="VBox"]
margin_top = 84.0
margin_right = 1024.0
margin_bottom = 104.0
text = "Generate Image"

[node name="GenTileSet" type="Button" parent="VBox"]
margin_top = 108.0
margin_right = 1024.0
margin_bottom = 128.0
text = "Generate TileSet"

[connection signal="pressed" from="VBox/Input/Folder" to="." method="_on_folder_pressed" binds= [ "input" ]]
[connection signal="pressed" from="VBox/OutputImage/Folder" to="." method="_on_folder_pressed" binds= [ "output_image" ]]
[connection signal="pressed" from="VBox/OutputTileSet/Folder" to="." method="_on_folder_pressed" binds= [ "output_tile_set" ]]
[connection signal="pressed" from="VBox/GenImage" to="." method="_on_gen_image_pressed"]
[connection signal="pressed" from="VBox/GenTileSet" to="." method="_on_gen_tile_set_pressed"]
